css: Fix columns filter alignment

--- a/htdocs/luci-static/resources/logview/logview.css
+++ b/htdocs/luci-static/resources/logview/logview.css
@@ -177,7 +177,7 @@
 }
 
 .logview-cbfilter.logview-columns > div {
-	justify-content: flex-end;
+	justify-content: flex-start;
 }
 
 .logview-cbfilter > div > div,
